--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 class="text-center"> <b> Smart Trash </b> </h1>
+  <h1 class="text-header"> <b> Smart Trash </b> </h1>
 
   <form class="p-3 text-center" action='/', method="post" enctype="multipart/form-data">
     <label for="imagefile" class="text-center p-2">Upload a picture of your waste</label><br>
@@ -61,6 +61,12 @@
   
 
 </div>
+</div>
+
+<div class="footer">
+  <p>
+    <b> Developed by <span class="footer-purple"> Amritsai </span> </b>
+  </p>
 </div>
 
 </body>
